[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
colored = "2.0.0"
lazy_static = "1.4.0"
log = "0.4.19"
memchr = "2.5.0"
pretty_env_logger = "0.5.0"
# Remove this dependency in the future
sysinfo = "0.29.2"
windows = { version = "0.48.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_SystemInformation", "Win32_System_SystemServices"] }

[[bin]]
name = "mimisweep"
path = "src/main.rs"
